--- a/package.json
+++ b/package.json
@@ -10,5 +10,11 @@
   },
   "dependencies": {
     "vite": "^5.0.0"
+  },
+  "overrides": {
+    "rollup": {
+      "@rollup/rollup-linux-x64-gnu": "npm:@rollup/rollup-linux-x64-musl",
+      "@rollup/rollup-linux-x64-musl": "npm:@rollup/rollup-linux-x64-musl"
+    }
   }
 }
