--- a/package.json
+++ b/package.json
@@ -12,9 +12,6 @@
     "vite": "^5.0.0"
   },
   "overrides": {
-    "rollup": {
-      "@rollup/rollup-linux-x64-gnu": "npm:@rollup/rollup-linux-x64-musl",
-      "@rollup/rollup-linux-x64-musl": "npm:@rollup/rollup-linux-x64-musl"
-    }
+    "rollup": "npm:@rollup/wasm-node"
   }
 }
